Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4070

RemapProcessor Forward Mapping with Recv Port failing with TS-2157 changes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 6.1.0
    • Network

    Description

      During the rework of RemapProcessor.cc, RemapProcessor::setup_for_remap() as part of the TS-2157 changeset, the port access API appears to have been incorrectly modified to use the client_info.src_addr.host_order_port() API [source port, host order] instead of the client_info.dst_addr.port() [destination/receive port, network
      order] API. This caused port based remapping based on the receive port to
      fail with ATS 6.0.0.

      Functionality was previously working with ATS 4.0.1.

      See attached patch that was used to restore the ATS 4.0.1 functionality.

      Looking for confirmation that this fix/patch was correct.

      Attachments

        1. TS-4070.patch
          0.8 kB
          Craig Schomburg

        Activity

          People

            es Eric Schwartz
            cschombu Craig Schomburg
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: