TS-4070 RemapProcessor Forward Mapping w/ Recv Port failing w/ TS-2157 changes

During the rework of RemapProcessor.cc, RemapProcessor::setup_for_remap()
as part of the TS-2157 changeset, the port access API appears to have been
incorrectly modified to use the client_info.src_addr.host_order_port() API
[source port, host order] instead of the client_info.dst_addr.port()
[destination/receive port, network order] API. This caused port based
remapping based on the receive port to fail with ATS 6.0.0.